@@ -1,6 +1,7 @@
 uoproxy (0.1.4) unstable; urgency=low
 
   * fixed struct uo_packet_create_character
+  * show which packet caused connection abort
   * use libevent
 
  --
